se modifico css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>Practica5 Bordes</title>
 </head>
+/*solo se modifico css*/
 <body>
     <section>
         <div id="box1" class="box">Box one</div>
